force-app/main/default/objects/Second_Opinion__c/Second_Opinion__c.object-meta.xml
<CustomObject>
    <label>Second Opinion</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>SEO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Second Opinions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>