force-app/main/default/objects/Second_Opinion__c/fields/Abha_ID__c.field-meta.xml
<CustomField>
    <fullName>Abha_ID__c</fullName>
    <formula>Patient_Name__r.ABHA_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abha ID</label>
    <type>Text</type>
</CustomField>