force-app/main/default/objects/Second_Opinion__c/fields/Doctor_1__c.field-meta.xml
<CustomField>
    <fullName>Doctor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor 1</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Second Opinions</relationshipLabel>
    <relationshipName>Second_Opinions</relationshipName>
    <type>Lookup</type>
</CustomField>