force-app/main/default/objects/Second_Opinion__c/fields/Doctor_2__c.field-meta.xml
<CustomField>
    <fullName>Doctor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor 2</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Second Opinions (Doctor 2)</relationshipLabel>
    <relationshipName>Second_Opinions1</relationshipName>
    <type>Lookup</type>
</CustomField>