force-app/main/default/objects/Second_Opinion__c/fields/Doctor_2_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Doctor_2_Suggestion__c</fullName>
    <label>Doctor 2 Suggestion</label>
    <type>TextArea</type>
</CustomField>