force-app/main/default/objects/Second_Opinion__c/fields/Match_Case__c.field-meta.xml
<CustomField>
    <fullName>Match_Case__c</fullName>
    <label>Match Case %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>