force-app/main/default/objects/Second_Opinion__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Second Opinions</relationshipLabel>
    <relationshipName>Second_Opinions</relationshipName>
    <type>Lookup</type>
</CustomField>